syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Chat {
  // Send a chat message
  rpc SendMessage(SendChatMessageRequest) returns (google.protobuf.Empty);
  // Join a chat room
  rpc JoinRoom(google.protobuf.Empty) returns (JoinChatRoomResponse);
}

message SendChatMessageRequest {
  int64 id = 1;
  string message = 2;
  string name = 3;
}

message JoinChatRoomResponse {
  int64 id = 1;
  string message = 2;
  string name = 3;
  google.protobuf.Timestamp date = 4;
}
